--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,9 @@ $online-store-theme: mat-light-theme(
 
 /* You can add global styles to this file, and also import other style files */
 
+@import url('https://fonts.googleapis.com/css2?family=Allison&family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Allison&display=swap');
+
 html,
 body {
 	height: 100%;
