--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,11 +1,12 @@
-<div class="auth-wrapper" [ngClass]="{ dark: toggleDarkTheme, light: !toggleDarkTheme }">
-  <app-toggle-button (toggle)="onToggle($event)"></app-toggle-button>
+<div class="auth-wrapper">
+  <img class="shop" src="../../assets/img/south-park.png" alt="shop" />
+
   <div class="auth">
-    <mat-tab-group color="warn" dynamicHeight mat-stretch-tabs>
+    <mat-tab-group color="primary" dynamicHeight mat-stretch-tabs>
       <mat-tab label="Sign in">
         <div class="auth__sign-in">
           <form class="example-form">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field color="primary" class="example-full-width" appearance="fill">
               <mat-label>Email</mat-label>
               <input type="email" matInput placeholder="Ex. pat@example.com" autocomplete="off" />
             </mat-form-field>
@@ -16,11 +17,12 @@
               <input type="email" matInput placeholder="******" />
             </mat-form-field>
           </form>
-          <button mat-raised-button color="warn">Login</button>
+          <button mat-raised-button color="primary">Login</button>
         </div>
       </mat-tab>
-      <mat-tab label="Sign up"
-        ><div class="auth__sign-in">
+
+      <mat-tab label="Sign up">
+        <div class="auth__sign-in">
           <form class="example-form">
             <mat-form-field class="example-full-width" appearance="fill">
               <mat-label>Login</mat-label>
@@ -43,10 +45,14 @@
               <input type="password" matInput placeholder="******" autocomplete="off" />
             </mat-form-field>
           </form>
-          <button mat-raised-button color="warn">Submit</button>
+          <button mat-raised-button color="primary">Submit</button>
         </div>
       </mat-tab>
     </mat-tab-group>
   </div>
-  <div class="backdrop"></div>
+
+  <div class="signature">
+    <img class="avatar" src="../../assets/img/Mysterion.png" alt="Mysterion" />
+    <span>Develop by Sergey Chumak</span>
+  </div>
 </div>
