--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,18 +1,17 @@
 <div class="auth-wrapper">
-  <img class="shop" src="../../assets/img/south-park.png" alt="shop" />
+  <div class="shop"></div>
 
   <div class="auth">
     <mat-tab-group color="primary" dynamicHeight mat-stretch-tabs>
       <mat-tab label="Sign in">
         <div class="auth__sign-in">
-          <form class="example-form">
-            <mat-form-field color="primary" class="example-full-width" appearance="fill">
+          <form class="auth__form">
+            <mat-form-field color="primary" class="auth__form--full-width" appearance="fill">
               <mat-label>Email</mat-label>
               <input type="email" matInput placeholder="Ex. pat@example.com" autocomplete="off" />
             </mat-form-field>
-          </form>
-          <form class="example-form">
-            <mat-form-field class="example-full-width" appearance="fill">
+
+            <mat-form-field class="auth__form--full-width" appearance="fill">
               <mat-label>Password</mat-label>
               <input type="email" matInput placeholder="******" />
             </mat-form-field>
@@ -23,24 +22,23 @@
 
       <mat-tab label="Sign up">
         <div class="auth__sign-in">
-          <form class="example-form">
-            <mat-form-field class="example-full-width" appearance="fill">
+          <form class="auth__form">
+            <mat-form-field class="auth__form--full-width" appearance="fill">
               <mat-label>Login</mat-label>
               <input type="text" matInput placeholder="Login" autocomplete="off" />
             </mat-form-field>
-          </form>
-          <form class="example-form">
-            <mat-form-field class="example-full-width" appearance="fill">
+
+            <mat-form-field class="auth__form--full-width" appearance="fill">
               <mat-label>Email</mat-label>
               <input type="email" matInput placeholder="Ex. pat@example.com" autocomplete="off" />
             </mat-form-field>
-          </form>
-          <form class="example-form">
-            <mat-form-field class="example-full-width" appearance="fill">
+
+            <mat-form-field class="auth__form--full-width" appearance="fill">
               <mat-label>Password</mat-label>
               <input type="password" matInput placeholder="******" autocomplete="off" />
             </mat-form-field>
-            <mat-form-field class="example-full-width" appearance="fill">
+
+            <mat-form-field class="auth__form--full-width" appearance="fill">
               <mat-label>Repeat password</mat-label>
               <input type="password" matInput placeholder="******" autocomplete="off" />
             </mat-form-field>
@@ -52,7 +50,7 @@
   </div>
 
   <div class="signature">
-    <img class="avatar" src="../../assets/img/Mysterion.png" alt="Mysterion" />
-    <span>Develop by Sergey Chumak</span>
+    <div class="avatar"></div>
+    <span>Developed by Sergey Chumak</span>
   </div>
 </div>
