--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -4,9 +4,10 @@
 	justify-content: center;
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
+	background: var(--color-background-primary);
 
 	.shop {
+		content: url('../../assets/img/south-park.png');
 		position: absolute;
 		top: 0;
 		left: 15px;
@@ -23,14 +24,14 @@
 			margin: 10px;
 		}
 
-		.example-form {
+		&__form {
 			width: 100%;
 			min-width: 150px;
 			max-width: 600px;
-		}
 
-		.example-full-width {
-			width: 100%;
+			&--full-width {
+				width: 100%;
+			}
 		}
 	}
 
@@ -40,16 +41,16 @@
 		bottom: 20px;
 		left: 20px;
 		align-items: end;
-		font-family: Allison, sans-serif;
-		font-size: 60px;
+		font-size: 32px;
 
 		.avatar {
+			content: url('../../assets/img/mysterion.png');
 			height: 100px;
 		}
 
 		span {
-			margin-bottom: 20px;
 			margin-left: 20px;
+			line-height: 1.1;
 		}
 	}
 }
@@ -58,13 +59,6 @@
 	.auth-wrapper {
 		.auth {
 			width: 400px;
-		}
-
-		.signature {
-			span {
-				margin-bottom: 0;
-				line-height: 40px;
-			}
 		}
 	}
 }
@@ -83,8 +77,7 @@
 			span {
 				margin-right: 10px;
 				margin-left: 10px;
-				font-size: 40px;
-				line-height: 35px;
+				font-size: 24px;
 			}
 		}
 	}
@@ -95,18 +88,17 @@
 		.shop {
 			height: 80px;
 		}
-	}
 
-	.signature {
-		.avatar {
-			height: 60px;
-		}
+		.signature {
+			.avatar {
+				height: 60px;
+			}
 
-		span {
-			margin-bottom: 0;
-			margin-left: 10px;
-			font-size: 36px;
-			line-height: 25px;
+			span {
+				margin-bottom: 0;
+				margin-left: 10px;
+				font-size: 20px;
+			}
 		}
 	}
 }
