--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,5 +1,7 @@
 <div class="auth-wrapper">
-  <div class="shop"></div>
+  <div>
+    <div class="shop"></div>
+  </div>
 
   <div class="auth">
     <mat-tab-group color="primary" dynamicHeight mat-stretch-tabs>
