--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -1,20 +1,18 @@
 .auth-wrapper {
 	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 100%;
-	height: 100%;
+	flex-direction: column;
+	justify-content: space-between;
+	min-height: 100%;
 	background: var(--color-background-primary);
 
 	.shop {
 		content: url('../../assets/img/south-park.png');
-		position: absolute;
-		top: 0;
-		left: 15px;
 		height: 100px;
+		margin: 0 10px 10px 10px;
 	}
 
 	.auth {
+		align-self: center;
 		width: 500px;
 
 		&__sign-in {
@@ -37,10 +35,8 @@
 
 	.signature {
 		display: flex;
-		position: absolute;
-		bottom: 20px;
-		left: 20px;
 		align-items: end;
+		margin: 10px;
 		font-size: 32px;
 
 		.avatar {
