--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -22,6 +22,12 @@
 			margin: 10px;
 		}
 
+		&__nonEqual {
+			margin-top: -18px;
+			margin-left: 10px;
+			font-size: 10.5px;
+		}
+
 		&__form {
 			width: 100%;
 			min-width: 150px;
