--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -147,6 +147,11 @@
 
   <div class="signature">
     <div class="avatar"></div>
-    <span>Developed by Sergey Chumak</span>
+    <div class="auth-wrapper__shop">
+      <span>Developed by Sergey Chumak*</span>
+      <div class="info">
+        The materials posted on the site are used solely for educational purposes.
+      </div>
+    </div>
   </div>
 </div>
