--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -11,6 +11,29 @@
 		margin: 0 10px 10px 10px;
 	}
 
+	&__shop {
+		position: relative;
+
+		&:hover {
+			.info {
+				visibility: visible;
+			}
+		}
+
+		.info {
+			visibility: hidden;
+			position: absolute;
+			bottom: 100%;
+			left: 100%;
+			width: 250px;
+			height: min-content;
+			padding: 10px;
+			border-radius: 5px;
+			background: rgba(84, 84, 84, 0.2);
+			font-size: 14px;
+		}
+	}
+
 	.auth {
 		align-self: center;
 		width: 500px;
@@ -62,6 +85,13 @@
 		.auth {
 			width: 400px;
 		}
+
+		&__shop {
+			.info {
+				left: 25%;
+				margin-bottom: 10px;
+			}
+		}
 	}
 }
 
@@ -82,6 +112,15 @@
 				font-size: 24px;
 			}
 		}
+
+		&__shop {
+			.info {
+				left: 0;
+				width: 200px;
+				margin-bottom: 10px;
+				font-size: 12px;
+			}
+		}
 	}
 }
 
@@ -100,6 +139,15 @@
 				margin-bottom: 0;
 				margin-left: 10px;
 				font-size: 20px;
+			}
+		}
+
+		&__shop {
+			.info {
+				left: 0;
+				width: 150px;
+				margin-bottom: 10px;
+				font-size: 10px;
 			}
 		}
 	}
