--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,4 +12,5 @@ body {
 	padding: 0;
 	font-family: 'South Park Cyrillic', sans-serif;
 	font-weight: 600;
+	cursor: url('/assets/img/south-park-aik-custom-cursor.png'), auto !important;
 }
