--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,16 +1,15 @@
 <div class="auth-wrapper">
   <div>
-    <div class="shop"></div>
+    <div class="auth-wrapper__header"></div>
   </div>
 
   <div class="auth">
     <mat-tab-group
-      [selectedIndex]="selected"
-      (selectedIndexChange)="selectTabs($event)"
+      (selectedIndexChange)="resetFormOnTabChange($event)"
       [color]="getColorSignInForm"
       dynamicHeight
       mat-stretch-tabs>
-      <mat-tab (click)="signUp()" label="Sign in">
+      <mat-tab (click)="signUp()" label="Sign In">
         <div class="auth__sign-in">
           <form [formGroup]="signInForm" class="auth__form">
             <mat-form-field class="auth__form--full-width" appearance="fill">
@@ -56,7 +55,7 @@
         </div>
       </mat-tab>
 
-      <mat-tab (click)="signInForm.reset()" label="Sign up">
+      <mat-tab (click)="signInForm.reset()" label="Sign Up">
         <div class="auth__sign-in">
           <form [formGroup]="signUpForm" class="auth__form">
             <mat-form-field class="auth__form--full-width" appearance="fill">
@@ -126,7 +125,7 @@
                   placeholder="******"
                   autocomplete="off" />
               </mat-form-field>
-              <mat-error class="auth__nonEqual" *ngIf="isNonEqualPassword">
+              <mat-error class="auth__form--nonEqual" *ngIf="isNonEqualPassword">
                 You suck ({{ signUpForm.get('password')?.errors?.nonEqual }})
               </mat-error>
             </div>
@@ -145,11 +144,11 @@
     </mat-tab-group>
   </div>
 
-  <div class="signature">
-    <div class="avatar"></div>
-    <div class="auth-wrapper__shop">
-      <span>Developed by Sergey Chumak*</span>
-      <div class="info">
+  <div class="auth-wrapper__footer">
+    <div class="auth-wrapper__footer--avatar"></div>
+    <div class="auth-wrapper__footer--signature">
+      <span class="auth-wrapper__footer--name">Developed by Sergey Chumak*</span>
+      <div class="auth-wrapper__footer--info">
         The materials posted on the site are used solely for educational purposes.
       </div>
     </div>
