--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -44,10 +44,12 @@
             </mat-form-field>
           </form>
 
+          <div class="auth__error" *ngIf="auth.error$ | async as error">You suck ({{ error }})</div>
+
           <button
             (click)="signIn()"
             type="submit"
-            [disabled]="signInForm.invalid"
+            [disabled]="signInForm.invalid || submitted"
             mat-raised-button
             color="primary">
             Login
@@ -134,7 +136,7 @@
           <button
             type="submit"
             (click)="signUp()"
-            [disabled]="signUpForm.invalid"
+            [disabled]="signUpForm.invalid || submitted"
             mat-raised-button
             color="primary">
             Submit
