--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -77,6 +77,12 @@
 			font-size: 10.5px;
 		}
 	}
+
+	&__error {
+		margin: -7px 0 3px 10px;
+		color: red;
+		font-size: 10.5px;
+	}
 }
 
 @media (max-width: 1000px) {
