--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,8 @@
 * {
 	--color-background-primary: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
+	--color-background-snackbar: rgba(47, 47, 47, 0.75);
+	--color-text-primary: #0090ff;
+	--color-text-warn: #f00;
+	--color-text-accent: #ff0051;
+	--color-text-error: red;
 }
