--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,1 +1,11 @@
-<button mat-button color="primary" (click)="logout()" routerLink="auth">Logout</button>
+<mat-drawer-container class="example-container" [hasBackdrop]="true">
+  <mat-drawer class="drawer" #drawer [mode]="'over'">
+    <button mat-button color="primary" (click)="logout()" routerLink="auth">Logout</button>
+  </mat-drawer>
+  <mat-drawer-content>
+    <div>
+      <img src="assets/img/sp-city-night.jpg" alt="day" />
+    </div>
+    <mat-icon (click)="drawer.open()">menu</mat-icon>
+  </mat-drawer-content>
+</mat-drawer-container>
