--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -3,7 +3,7 @@
 	flex-direction: column;
 	justify-content: space-between;
 	min-height: 100%;
-	background: var(--color-background-primary);
+	background: var(--color-background-auth);
 
 	&__header {
 		content: url('../../assets/img/south-park.png');
