--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,8 @@ body {
 	font-weight: 600;
 	cursor: url('assets/img/south-park-aik-custom-cursor.png'), auto !important;
 }
+
+body {
+	margin: 0;
+	font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
