--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,7 @@
 * {
-	--color-background-primary: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
+	--color-background-auth: linear-gradient(135deg, #e55d87 0%, #5fc3e4 100%);
+	--color-background-primary: linear-gradient(120deg, #dde2ec, #92c3ff);
+	--color-background-warn: linear-gradient(120deg, #dde2ec, #ff7a7a);
 	--color-background-snackbar: rgba(47, 47, 47, 0.75);
 	--color-text-primary: #0090ff;
 	--color-text-warn: #f00;
