--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,5 +6,5 @@
 	--color-text-primary: #0090ff;
 	--color-text-warn: #f00;
 	--color-text-accent: #ff0051;
-	--color-text-error: red;
+	--color-text-error: #ff351a;
 }
