--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,160 +1,27 @@
 <div class="auth-wrapper">
-  <div>
-    <div class="auth-wrapper__header"></div>
+  <div class="auth-wrapper__header">
+    <img src="assets/img/south-park.png" alt="shop" class="auth-wrapper__header--img" />
+    <div><button mat-button color="primary">I'm admin</button></div>
   </div>
 
   <div class="auth">
     <mat-tab-group
+      [color]="(auth.errorLogin$ | async) || (auth.errorSignUp$ | async) ? 'warn' : 'primary'"
       [selectedIndex]="tabSelected"
-      (selectedIndexChange)="resetFormOnTabChange($event)"
-      [color]="getColorSignInForm"
       dynamicHeight
       mat-stretch-tabs>
-      <mat-tab (click)="signUp()" label="Sign In">
-        <div class="auth__sign-in">
-          <form [formGroup]="signInForm" (keyup.enter)="login()" class="auth__form">
-            <mat-form-field class="auth__form--full-width" appearance="fill">
-              <mat-label>Email</mat-label>
-              <input
-                type="email"
-                formControlName="email"
-                matInput
-                placeholder="Ex. pat@example.com" />
-
-              <mat-error *ngIf="isInvalidSignInFormEmail">
-                You suck (Please enter a valid email address)
-              </mat-error>
-
-              <mat-error *ngIf="signInForm.controls.email.hasError('required')">
-                You suck (Email is <strong>required</strong>)
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field class="auth__form--full-width" appearance="fill">
-              <mat-label>Password</mat-label>
-              <input type="password" formControlName="password" matInput placeholder="******" />
-
-              <mat-error *ngIf="!signInForm.controls.password.hasError('required')">
-                You suck (Minimum length must be 6 characters) Actual:
-                {{ actualLengthPasswordSignIn }}
-              </mat-error>
-
-              <mat-error *ngIf="signInForm.controls.password.hasError('required')">
-                You suck (Password is <strong>required</strong>)
-              </mat-error>
-            </mat-form-field>
-          </form>
-
-          <div class="auth__error" *ngIf="auth.errorLogin$ | async as error">
-            You suck ({{ error }})
-          </div>
-
-          <button
-            (click)="login()"
-            type="submit"
-            [disabled]="signInForm.invalid || submitted"
-            mat-raised-button
-            color="primary">
-            Login
-          </button>
-        </div>
+      <mat-tab label="Sign In">
+        <app-login-form (login)="login($event)" [submitted]="submitted"></app-login-form>
       </mat-tab>
 
-      <mat-tab (click)="signInForm.reset()" label="Sign Up">
-        <div class="auth__sign-in">
-          <form [formGroup]="signUpForm" (keyup.enter)="signUp()" class="auth__form">
-            <mat-form-field class="auth__form--full-width" appearance="fill">
-              <mat-label>Username</mat-label>
-              <input
-                formControlName="username"
-                type="text"
-                matInput
-                placeholder="Login"
-                autocomplete="off" />
-
-              <mat-error *ngIf="signUpForm.controls.username.hasError('required')">
-                You suck (Username is <strong>required</strong>)
-              </mat-error>
-
-              <mat-error *ngIf="signUpForm.controls.username.hasError('onlyLetters')">
-                You suck (Only letters allowed)
-              </mat-error>
-            </mat-form-field>
-
-            <mat-form-field class="auth__form--full-width" appearance="fill">
-              <mat-label>Email</mat-label>
-              <input
-                formControlName="email"
-                type="email"
-                matInput
-                placeholder="Ex. pat@example.com"
-                autocomplete="off" />
-
-              <mat-error *ngIf="isInvalidSignUpFormEmail">
-                You suck (Please enter a valid email address)
-              </mat-error>
-
-              <mat-error *ngIf="signUpForm.controls.email.hasError('required')">
-                You suck (Email is <strong>required</strong>)
-              </mat-error>
-            </mat-form-field>
-
-            <div formGroupName="password">
-              <mat-form-field class="auth__form--full-width" appearance="fill">
-                <mat-label>Password</mat-label>
-                <input
-                  formControlName="password"
-                  type="password"
-                  matInput
-                  placeholder="******"
-                  autocomplete="off" />
-
-                <mat-error
-                  *ngIf="!signUpForm.get('password')?.get('password')?.hasError('required')">
-                  You suck (Minimum length must be 6 characters) Actual:
-                  {{ actualLengthPasswordSignUp }}
-                </mat-error>
-
-                <mat-error
-                  *ngIf="signUpForm.get('password')?.get('password')?.hasError('required')">
-                  You suck (Password is <strong>required</strong>)
-                </mat-error>
-              </mat-form-field>
-
-              <mat-form-field class="auth__form--full-width" appearance="fill">
-                <mat-label>Repeat password</mat-label>
-                <input
-                  formControlName="copyPassword"
-                  type="password"
-                  matInput
-                  placeholder="******"
-                  autocomplete="off" />
-              </mat-form-field>
-              <mat-error class="auth__form--nonEqual" *ngIf="isNonEqualPassword">
-                You suck ({{ signUpForm.get('password')?.errors?.nonEqual }})
-              </mat-error>
-            </div>
-          </form>
-
-          <div class="auth__error" *ngIf="auth.errorSignUp$ | async as error">
-            You suck ({{ error }})
-          </div>
-
-          <button
-            type="submit"
-            (click)="signUp()"
-            [disabled]="signUpForm.invalid || submitted"
-            mat-raised-button
-            color="primary">
-            Submit
-          </button>
-        </div>
+      <mat-tab label="Sign Up">
+        <app-signup-form (signup)="signup($event)" [submitted]="submitted"></app-signup-form>
       </mat-tab>
     </mat-tab-group>
   </div>
 
   <div class="auth-wrapper__footer">
-    <div class="auth-wrapper__footer--avatar"></div>
+    <img src="assets/img/mysterion.png" alt="avatar" class="auth-wrapper__footer--avatar" />
     <div class="auth-wrapper__footer--signature">
       <span class="auth-wrapper__footer--name">Developed by Sergey Chumak*</span>
       <div class="auth-wrapper__footer--info">
